# Basic_Game_Engine

./: .gitignore  CMakeLists.txt  Engine_Game.sln  README.md  unique.txt
ArchiveEngine/: ArchiveEngine.vcxproj  ArchiveEngine.vcxproj.filters  CMakeLists.txt
ArchiveEngine/include/: Archive.h
ArchiveEngine/src/: ArchiveApp.cpp  ArchiveApp.h  ArchiveEvents.cpp  ArchiveEvents.h  ArchiveKeys.h  ArchiveUtil.h  GameWindow.cpp  GameWindow.h  Image.cpp  Image.h  ImplImage.h  ImplRenderer.h  ImplShader.h  Renderer.cpp  Renderer.h  RendererTypes.h  Shader.cpp  Shader.h  Unit.cpp  Unit.h  WindowImplementation.h  pch.h
ArchiveEngine/src/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h
ArchiveEngine/src/OpenGLCode/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGlRenderer.cpp
Assets/Images/: test.txt
Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Engine_Game/: CMakeLists.txt  Engine_Game.vcxproj  Engine_Game.vcxproj.filters  main.cpp
Engine_Game/src/: Coin.cpp  Coin.h  Platform.cpp  Platform.h  Player.cpp  Player.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
